<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.formCadastro.FormCadastro"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_form_login"
            android:textSize="25sp"
            android:textColor="@color/secundario"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"


            />

        <EditText
            android:id="@+id/edit_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_login"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"

            />
        <EditText
            android:id="@+id/edit_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha_login"
            android:background="@color/white"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="@drawable/button_enter"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:padding="15dp"
            android:layout_margin="20dp"
            />
        <TextView
            android:id="@+id/txt_telaCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tela_cadastro"
            android:textSize="16sp"
            android:textColor="@color/secundario"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"


            />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>